# mlys-pj

./: .gitignore  PHASE2_REFACTOR_PLAN_LORA_OPTIMIZATION.md  PROJECT_HANDOFF.md  README.md  REFACTOR_PLAN_EXAMPLE_ALIGNMENT.md  REFACTOR_PLAN_INTRINSIC_PROBE_LOOP.md  output_id.txt  output_id2.txt  phase2_report.md  pyproject.toml  report.md  report2.md  report3.md  run.sh
profiler_agent/: __init__.py  agent_state.py  main.py  probe_analysis.py  probe_iteration.py  report_summary.py  runtime_budget.py  runtime_tools.py  target_semantics.py
runtime/: __init__.py
scripts/: pre_submit_check.py  server_self_check.py
tests/: test_agent_state.py  test_analyzer.py  test_analyzer_llm_reasoning.py  test_binary_runner.py  test_codegen_generator.py  test_cross_verify.py  test_detectors.py  test_device_attribute_adapter.py  test_device_attribute_strategy.py  test_executor_phase3.py  test_golden_fixtures.py  test_llm_client.py  test_main_modes.py  test_metric_specs_phase2.py  test_microbench_adapter.py  test_multi_agent_framework.py  test_multi_agent_llm_usage.py  test_ncu_adapter.py  test_nogpu_fallback_logic.py  test_phase2_evaluator.py  test_phase2_generator.py  test_phase2_harness.py  test_phase2_optimizer.py  test_phase2_workflow.py  test_phase3_generator.py  test_phase3_prompts.py  test_pipeline_smoke.py  test_probe_analysis.py  test_probe_iteration.py  test_probe_refinement_multi_agent.py  test_registry.py  test_result_schema.py  test_runtime_tools.py  test_schema.py  test_server_self_check.py  test_target_semantics.py
tools/: selfcheck_submission.py
(+76 files in other folders)
