[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-prof-agent"
version = "0.1.0"
description = "Target-driven GPU profiling agent skeleton"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["profiler_agent*"]

